--- a/lab/css/style.css
+++ b/lab/css/style.css
@@ -13,9 +13,18 @@ body {
 .map {
     background-color: #eee;
     position: absolute;
-    left: 400px;
-    right: 0;
+    left: 0px;
+    width: 70%;
     bottom: 0;
+    top: 10%;
+}
+
+.header {
+    background-color: #e2e;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    height: 10%;
     top: 0;
 }
 
@@ -24,8 +33,8 @@ body {
                          a lot of content in it */
     background-color: #ccc;
     position: absolute;
-    left: 0;
-    width: 400px;
+    right: 0px;
+    width: 30%;
     bottom: 0;
-    top: 0;
+    top: 10%;
 }
